--- a/board/src/main/webapp/driver.xhtml
+++ b/board/src/main/webapp/driver.xhtml
@@ -2,15 +2,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
     <h:outputLabel value="Hello, world"/>
 </f:view>
-<body>
-<h1>Hello</h1>
-<h:body>
-    <h:link value="Login page" outcome="driver" />
-</h:body>
-</body>
+<h:dataTable value="#{driverUpdateSessionBean.savedDriver}" var="driver">
+    <h:outputText value="#{driver.driverFirstName}">
+
+    </h:outputText>
+</h:dataTable>
 </html>
