Changed structure. Writing to a file and reading from a file functionality added.

--- a/board/src/main/webapp/status.xhtml
+++ b/board/src/main/webapp/status.xhtml
@@ -52,8 +52,8 @@
             <th scope="col">Rest Drivers</th>
         </tr>
         <tr>
-            <td>#{kafkaMDB.driverStatus.totalDrivers}</td>
-            <td>#{kafkaMDB.driverStatus.driversOnRest}</td>
+            <td>#{consumerService.driverStatus.totalDrivers}</td>
+            <td>#{consumerService.driverStatus.driversOnRest}</td>
         </tr>
 
         </thead>
@@ -70,9 +70,9 @@
 
         </tr>
         <tr>
-            <td>#{kafkaMDB.truckStatus.totalTrucksNumber}</td>
-            <td>#{kafkaMDB.truckStatus.totalBrokenNumber}</td>
-            <td>#{kafkaMDB.truckStatus.totalRestNumber}</td>
+            <td>#{consumerService.truckStatus.totalTrucksNumber}</td>
+            <td>#{consumerService.truckStatus.totalBrokenNumber}</td>
+            <td>#{consumerService.truckStatus.totalRestNumber}</td>
 
         </tr>
 
