--- a/board/src/main/webapp/status.xhtml
+++ b/board/src/main/webapp/status.xhtml
@@ -7,7 +7,7 @@
 >
 
 <h:head>
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>-->
+
     <script type="text/javascript">
         var baseUri = window.location.href;
         wsUri = baseUri.concat('test').concat("/");
@@ -21,8 +21,7 @@
             kafkaSocket.onopen = function () {
                 console.log('Connected!');
             };
-            kafkaSocket.onmessage = function (event) {
-                // console.log(event.data);
+            kafkaSocket.onmessage = function () {
                 window.location.reload();
             };
         }
@@ -36,45 +35,42 @@
 
 </h:head>
 <h:body onload="listen();" onunload="closeConnection();">
-<!--<div id="ordersTable">-->
+
     <h1 align="center">Orders</h1>
     <p:dataTable style="font-size:12px;" value="#{consumerService.orderStatus}" var="order">
 
         <p:column headerText="Order Id">
-<!--            <f:facet name="header">Order Id</f:facet>-->
+
             <h:outputText value="#{order.orderId}"/>
         </p:column>
 
         <p:column headerText="Drivers">
-<!--            <f:facet name="header">Drivers</f:facet>-->
+
             <h:outputText value="#{order.drivers.size() eq 0? 'no drivers assigned' : order.drivers}"/>
         </p:column>
 
         <p:column headerText="Is Order Completed?">
-<!--            <f:facet name="header">Is Order Comleted</f:facet>-->
+
             <h:outputText value="#{order.completed ? 'Completed' : 'Not completed'}"/>
 
         </p:column>
 
         <p:column headerText="Truck">
-<!--            <f:facet name="header">Truck</f:facet>-->
+
             <h:outputText value="#{order.truck == null ? 'no trucks assigned' : order.truck}"/>
         </p:column>
 
         <p:column headerText="Total points on route">
-<!--            <f:facet name="header">Total points on route</f:facet>-->
+
             <h:outputText value="#{order.numOfPointsTotal}"/>
         </p:column>
 
-        <p:column headerText="Completed Points" >
-<!--            <f:facet name="header">Completed points</f:facet>-->
+        <p:column headerText="Completed Points">
+
             <h:outputText value="#{order.numOfCompletedPoints}"/>
         </p:column>
     </p:dataTable>
-<!--</div>-->
 
-
-<!--<div id="driversTable">-->
     <h1 align="center" style="margin-bottom: 15px">Drivers</h1>
     <p:dataTable style="font-size:12px;" value="#{consumerService.driverStatus}" var="driverStatus">
         <p:column headerText="Total drivers">
@@ -88,9 +84,7 @@
             </h:outputText>
         </p:column>
     </p:dataTable>
-<!--</div>-->
 
-<!--<div id="trucksTable">-->
     <h1 align="center" style="margin-bottom: 15px">Trucks</h1>
     <p:dataTable style="font-size:12px;" value="#{consumerService.truckStatus}" var="truckStatus">
         <p:column headerText="Total Trucks">
@@ -103,13 +97,13 @@
 
             </h:outputText>
         </p:column>
-        <p:column  headerText="Rest trucks">
+        <p:column headerText="Rest trucks">
             <h:outputText value="#{truckStatus.totalRestNumber}">
 
             </h:outputText>
         </p:column>
     </p:dataTable>
-<!--</div>-->
+    <!--</div>-->
 </h:body>
 
 
